--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -11,7 +11,7 @@ header {
     height: 600px;
 }
 
-.banner {
+.header-banner {
     background-image: linear-gradient(#070211, #07021100), url('../resources/Banner\ Image.png');
     background-repeat: no-repeat;
     border-radius: 16px;
@@ -20,7 +20,7 @@ header {
 
 }
 
-.banner p {
+.header-banner p {
     font-family: 'Merriweather', serif;
     font-size: 32px;
     margin-bottom: 25px;
@@ -28,7 +28,7 @@ header {
 
 }
 
-.banner h3 {
+.header-banner h3 {
     font-family: 'Merriweather', serif;
     font-size: 72px;
     margin-top: 0px;
@@ -36,7 +36,7 @@ header {
 
 }
 
-.banner-text {
+.header-banner-text {
     padding-top: 180px;
     padding-bottom: 180px;
 }
@@ -74,5 +74,38 @@ header {
 .section-1-title img {
     width: 802.9px;
     height: 500px;
+
+}
+
+/* section-2 */
+.section-2 {
+    padding: 50px 140px;
+    margin-top: 120px;
+    color: white;
+
+}
+
+.section-2-banner {
+    background-image: linear-gradient(#070211, #07021100), url('../resources/Vectorrr.png');
+    width: 1320px;
+    height: 600px;
+    border-radius: 16px;
+    padding-top: 126px;
+    padding-left: ;
+
+}
+
+.section-2-text h3 {
+    font-family: 'Merriweather', serif;
+    font-size: 64px;
+    letter-spacing: 7.04px;
+
+
+}
+
+.section-2-text p {
+
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
 
 }
