--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -82,23 +82,32 @@ header {
     padding: 50px 140px;
     margin-top: 120px;
     color: white;
-
 }
 
 .section-2-banner {
     background-image: linear-gradient(#070211, #07021100), url('../resources/Vectorrr.png');
+    background-repeat: no-repeat;
     width: 1320px;
-    height: 600px;
+    max-height: 600px;
     border-radius: 16px;
-    padding-top: 126px;
-    padding-left: ;
 
+    display: flex;
+    justify-content: space-between;
+
+
+
+}
+
+.section-2-text {
+    padding-top: 125px;
+    padding-left: 125px;
 }
 
 .section-2-text h3 {
     font-family: 'Merriweather', serif;
     font-size: 64px;
     letter-spacing: 7.04px;
+    margin-bottom: 25px;
 
 
 }
@@ -107,5 +116,24 @@ header {
 
     font-family: 'Inter', sans-serif;
     font-size: 18px;
+    color: rgba(255, 255, 255, 0.80);
+
+
+}
+
+.section-2-p {
+    font-family: 'Inter', sans-serif;
+    margin-top: 45px;
+    margin-left: 58px;
+    font-size: 20px;
+
+
+
+}
+
+.section-2-img {
+    padding-right: 140px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 
 }
