--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -137,3 +137,17 @@ header {
     padding-bottom: 80px;
 
 }
+
+/* section-3 style */
+.section-3 {
+    
+    padding: 50px 140px;
+    margin-top: 120px;
+    text-align: center;
+
+}
+
+.section-3-text {  background-color:#FF0000, #FF000000 ;
+   
+
+}
